# tiny-c2

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
c2-lib/: CMakeLists.txt  aes.c  messaging.c  tc2.c  util.c
c2-lib/include/: aes.h  capabilities.h  cassert.h  messages.h  util.h
linux-client/: CMakeLists.txt  caps.c  main.c  messaging.c
linux-client/include/: caps.h  caps.h.in  messaging.h
server/: CMakeLists.txt  cli.c  handler.c  ipc.c  main.c  msg_reader.c  server.c
server/include/: cli.h  handler.h  ipc.h  msg_reader.h  server.h  version.h
